--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 14px;
     line-height: 1.6;
     color: #222;
