--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -47,14 +47,9 @@
     </form>
 
     <div id="results" style="display: {% if search_results %}block{% else %}none{% endif %};">
-        {% if search_results %}
-            {% for title, link in search_results %}
-                <p><a href="{{ link }}">{{ title }}</a></p>
-            {% endfor %}
-        {% else %}
-            <p>Aucun résultat trouvé</p>
-        {% endif %}
-
+        {% for result in search_results %}
+            {{ result|safe }}
+        {% endfor %}
     </div>
 </body>
 </html>
